<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_principal"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_principal" />
        <item
            android:id="@+id/nav_dispositivo"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_dispositivo" />
        <item
            android:id="@+id/nav_dispositivos"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_dispositivos" />
        <item
            android:id="@+id/nav_preguntasd"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_preguntasd" />
        <item
            android:id="@+id/nav_bitacora"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_bitacora" />
        <item
            android:id="@+id/nav_informacion"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_informacion" />
        <item
            android:id="@+id/nav_acciones"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_acciones" />
        <item
            android:id="@+id/nav_config"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_config" />
    </group>
</menu>
